# codeprism

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE-APACHE  LICENSE-MIT  MILESTONE_3_ACTUAL_STATUS_REPORT.md  MILESTONE_3_QA_REPORT.md  Makefile  README.md  SECURITY.md  deny.toml  docker-compose.yml  final_test_results.json  issue_83_solution.md  mcp-server-analysis-for-llm-agents.md  mcp_test_results_detailed.json  rust-toolchain.toml  tarpaulin.toml  test-harness-fixed.yaml  test-harness.yaml
crates/codeprism-analysis/: Cargo.toml
crates/codeprism-analysis/src/: api_surface.rs  complexity.rs  duplicates.rs  lib.rs  performance.rs  security.rs
crates/codeprism-analysis/src/semantic/: concepts.rs  mod.rs  search.rs
crates/codeprism-core/: Cargo.toml
crates/codeprism-core/benches/: parsing_benchmark.rs
crates/codeprism-core/examples/: phase_2_5_demo.rs
crates/codeprism-core/src/: error.rs  graph.rs  lib.rs  observability.rs  resilience.rs
crates/codeprism-core/src/ast/: mod.rs
crates/codeprism-core/src/content/: extractors.rs  index.rs  mod.rs  parsers.rs  search.rs
crates/codeprism-core/src/indexer/: mod.rs
crates/codeprism-core/src/linkers/: mod.rs  symbol_resolver.rs
crates/codeprism-core/src/parser/: mod.rs
crates/codeprism-core/src/patch/: mod.rs
crates/codeprism-core/src/pipeline/: mod.rs
crates/codeprism-core/src/repository/: mod.rs
crates/codeprism-core/src/watcher/: mod.rs
crates/codeprism-dev-tools/: Cargo.toml
crates/codeprism-dev-tools/src/: ast_visualizer.rs  dev_repl.rs  diff_comparison.rs  graphviz_export.rs  lib.rs  parser_validator.rs  performance_profiler.rs
crates/codeprism-lang-java/: Cargo.toml
crates/codeprism-lang-java/src/: adapter.rs  analysis.rs  ast_mapper.rs  error.rs  lib.rs  parser.rs  types.rs
crates/codeprism-lang-java/tests/: integration_tests.rs
crates/codeprism-mcp/: Cargo.toml
crates/codeprism-mcp-server/: Cargo.toml
crates/codeprism-mcp-server/src/: config.rs  error.rs  integration_test.rs  lib.rs  main.rs  response.rs  server.rs
crates/codeprism-mcp-server/src/tools/: analysis.rs  core.rs  mod.rs  search.rs  workflow.rs
crates/codeprism-mcp/examples/: basic_rmcp_test.rs  basic_router_test.rs  debug_tools.rs  list_all_tools.rs  rmcp_minimal_server.rs
crates/codeprism-mcp/src/: config.rs  error_handler.rs  lib.rs  main.rs  monitoring.rs  prompts.rs  protocol.rs  protocol_rmcp.rs  resources.rs  rmcp_bridge.rs  server.rs  server_rmcp.rs  tools_legacy.rs  transport.rs  transport_rmcp.rs  validation.rs
crates/codeprism-moth-specs/: Cargo.toml  README.md
crates/codeprism-moth-specs/src/: lib.rs
crates/codeprism-storage/: Cargo.toml
crates/codeprism-storage/src/: backends.rs  cache.rs  config.rs  graph.rs  lib.rs  serialization.rs
crates/codeprism-test-harness/: Cargo.toml
crates/codeprism-test-harness/config/: COMPREHENSIVE_TEST_DEFINITIONS.md
crates/codeprism-test-harness/examples/: comprehensive_reporting.yaml  performance_monitoring.yaml  validation_scripts.yaml
crates/codeprism-test-harness/src/: config.rs  executor.rs  lib.rs  main.rs  performance.rs  prompts.rs  resources.rs  script.rs  server.rs  tools.rs  transport.rs  types.rs
crates/codeprism-utils/: Cargo.toml
crates/codeprism-utils/src/: error.rs  lib.rs  watcher.rs
crates/gcore-bus/: Cargo.toml
crates/gcore-cli/: Cargo.toml
crates/gcore-cli/src/: main.rs
crates/gcore-daemon/: Cargo.toml
crates/gcore-daemon/src/: main.rs
crates/gcore-lang-java/: Cargo.toml
crates/gcore-lang-java/src/: lib.rs
crates/gcore-mcp/: Cargo.toml
crates/gcore-mcp/src/: lib.rs  main.rs  prompts.rs  protocol.rs  resources.rs  server.rs  tools.rs
crates/mandrel-mcp-th/: Cargo.toml  README.md
crates/mandrel-mcp-th/examples/: everything-server-simplified.yaml  everything-server-working.yaml  everything-server.yaml  filesystem-server-corrected.yaml  filesystem-server-mcp-compliant.yaml  filesystem-server.yaml  weather-server.yaml
crates/mandrel-mcp-th/reports/: report.json
crates/mandrel-mcp-th/src/: error.rs  executor.rs  lib.rs  main.rs
crates/mandrel-mcp-th/tests/: cli_run.rs  integration_tests.rs
crates/mcp-test-harness/: Cargo.toml
crates/mcp-test-harness/examples/: api-wrapper-server.yaml  database-server.yaml  filesystem-server.yaml  jsonpath-validation-demo.yaml  simple-server.yaml
crates/mcp-test-harness/schemas/: server-spec.json
crates/mcp-test-harness/src/: cli.rs  lib.rs  main.rs  types.rs  utils.rs
crates/prism-core/: Cargo.toml
crates/prism-core/examples/: phase_2_5_demo.rs
crates/prism-core/src/: error.rs  graph.rs  lib.rs
crates/prism-lang-python/: Cargo.toml
crates/prism-lang-python/src/: adapter.rs  analysis.rs  ast_mapper.rs  error.rs  lib.rs  parser.rs  types.rs
crates/prism-lang-python/tests/: integration_tests.rs  test_function_call_bug.rs  test_inheritance_bug.rs  test_regression_call_bug.rs
crates/prism-storage/: Cargo.toml
crates/prism-storage/src/: lib.rs
mcp-test-harness-standalone/: Cargo.toml  README.md
mcp-test-harness-standalone/configs/examples/: basic-mcp-server.yaml
mcp-test-harness-standalone/docker/: Dockerfile
mcp-test-harness-standalone/scripts/: build.sh
mcp-test-harness-standalone/src/: config.rs  integration_test.rs  main.rs  runner.rs  server.rs  validation.rs
test-projects/python-sample/: main.py  pyproject.toml
test-projects/python-sample/api/: __init__.py  handlers.py  middleware.py  routes.py
test-projects/python-sample/core/: __init__.py  base.py  events.py  exceptions.py  protocols.py  types.py
test-projects/python-sample/infrastructure/: __init__.py
test-projects/python-sample/models/: __init__.py  user.py
test-projects/python-sample/services/: __init__.py  auth.py  cache.py  database.py
test-projects/python-sample/utils/: __init__.py  config.py  logger.py
test-projects/rust-test-project/: Cargo.toml  README.md
test-projects/rust-test-project/src/: async_patterns.rs  errors.rs  main.rs  models.rs  patterns.rs  performance.rs  services.rs  unsafe_ops.rs
(+629 files in other folders)
