[workspace]
resolver = "2"
members = [
    "crates/prism-core",
    "crates/prism-bus",
    "crates/prism-storage",
    "crates/prism-mcp",
    "crates/prism-lang-js",
    "crates/prism-lang-python",
    "crates/prism-lang-java",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DragonScale Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dragonscale/prism"
rust-version = "1.82"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Tree-sitter and language support
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.24"

# Storage and messaging
neo4rs = "0.8"
rdkafka = { version = "0.36", features = ["cmake-build"] }
prost = "0.13"
prost-build = "0.13"

# Web frameworks (for future MCP implementation)
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Utilities
blake3 = "1.5"
hex = "0.4"
lru = "0.12"
notify = "6.1"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
once_cell = "1.20"
dashmap = "6.1"
rayon = "1.10"
regex = "1.11"

# Testing
insta = { version = "1.40", features = ["yaml"] }
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["neo4j", "kafka"] }
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 2 