[workspace]
members = [
    "crates/codeprism-core",
    "crates/codeprism-utils",
    "crates/codeprism-lang-rust",
    "crates/codeprism-lang-python",
    "crates/codeprism-lang-js", 
    "crates/codeprism-lang-java",
    "crates/codeprism-analysis",
    "crates/codeprism-storage",
    "crates/codeprism-mcp-server",
    "crates/codeprism-dev-tools",
    "crates/mandrel-mcp-th",
    "crates/codeprism-moth-specs",
]
resolver = "2"

[workspace.package]
version = "0.3.4"
edition = "2021"
authors = ["The Rustic Initiative"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustic-ai/codeprism"
rust-version = "1.82"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
chrono = { version = "0.4", features = ["serde"] }

# Tree-sitter and language support
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.23"

# Storage and messaging
rdkafka = { version = "0.36", features = ["cmake-build"] }
prost = "0.13"
prost-build = "0.13"

# Web frameworks (for future MCP implementation)
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Utilities
blake3 = "1.5"
hex = "0.4"
lru = "0.12"
notify = "6.1"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
once_cell = "1.20"
dashmap = "6.1"
rayon = "1.10"
regex = "1.11"
rand = "0.8"

# Dev tools dependencies
colored = "2.1"
crossterm = "0.28"
indicatif = "0.17"
handlebars = "5.1"

# Testing
insta = { version = "1.40", features = ["yaml"] }
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["kafka"] }
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 2 