[package]
name = "mcp-test-harness"
version = "0.1.0"
edition = "2021"
description = "Standalone test harness for Model Context Protocol (MCP) servers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustic-ai/codeprism"
keywords = ["mcp", "testing", "protocol", "ai", "llm"]
categories = ["development-tools::testing", "command-line-utilities"]
authors = ["CodePrism Team <team@codeprism.ai>"]
readme = "README.md"

[[bin]]
name = "mcp-test-harness"
path = "src/main.rs"

[dependencies]
# Core dependencies - minimal and focused
tokio = { version = "1.0", features = ["full", "io-util", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP and JSON-RPC for MCP communication
reqwest = { version = "0.12", features = ["json"] }
jsonrpc-core = "18.0"

# Process management for server lifecycle
process_control = "4.0"
which = "6.0"

# Configuration and validation
jsonschema = "0.18"
uuid = { version = "1.0", features = ["v4"] }



# Optional features for advanced functionality
regex = "1.0"
walkdir = "2.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
which = "6.0"

[features]
default = []
docker-support = []
extended-validation = []

[workspace]
# This is a standalone package, not part of the parent workspace
