[package]
name = "codeprism-analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Language-agnostic code analysis tools for CodePrism"

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
regex.workspace = true

# File operations
walkdir = "2.4"
tokio = { workspace = true, features = ["fs"] }

# Internal dependencies
codeprism-core = { version = "0.3.0", path = "../codeprism-core" }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] } 