[package]
name = "codeprism-lang-java"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Java language support for codeprism"

[dependencies]
anyhow = "1.0"
regex = "1.0"
tree-sitter.workspace = true
tree-sitter-java.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
blake3.workspace = true
hex.workspace = true

[dev-dependencies]
insta.workspace = true 