[package]
name = "codeprism-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP server implementation using the official Rust SDK"
keywords = ["mcp", "server", "code-analysis", "rust-sdk"]
categories = ["development-tools", "network-programming"]

[[bin]]
name = "codeprism-mcp-server"
path = "src/main.rs"

[dependencies]
# Core runtime
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
clap = { workspace = true }
config = { workspace = true }
toml = "0.8"
serde_yaml = "0.9"

# MCP Rust SDK dependencies
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-io", "transport-sse-server"] }

# Codeprism dependencies - will be added as implementation progresses
# codeprism-core = { path = "../codeprism-core" }
# codeprism-analysis = { path = "../codeprism-analysis" }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true } 