[package]
name = "codeprism-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP server implementation using the official Rust SDK"
keywords = ["mcp", "server", "code-analysis", "rust-sdk"]
categories = ["development-tools", "network-programming"]

[[bin]]
name = "codeprism"
path = "src/main.rs"

[dependencies]
# Core runtime
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# File system operations
glob = "0.3"

# Configuration
clap = { workspace = true }
config = { workspace = true }
toml = "0.8"
serde_yaml = "0.9"

# MCP Rust SDK dependencies
rmcp = { version = "0.3.1", features = ["server", "transport-io", "transport-sse-server"] }

# Codeprism dependencies for complete standalone functionality
codeprism-core = { path = "../codeprism-core" }
codeprism-analysis = { path = "../codeprism-analysis" }
codeprism-storage = { path = "../codeprism-storage" }
codeprism-utils = { path = "../codeprism-utils" }

# Language support - all parsers included for complete functionality
codeprism-lang-rust = { path = "../codeprism-lang-rust" }
codeprism-lang-python = { path = "../codeprism-lang-python" }
codeprism-lang-js = { path = "../codeprism-lang-js" }
codeprism-lang-java = { path = "../codeprism-lang-java" }

regex.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true } 
