[package]
name = "codeprism-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP server implementation using the official Rust SDK"
keywords = ["mcp", "server", "code-analysis", "rust-sdk"]
categories = ["development-tools", "network-programming"]

[[bin]]
name = "codeprism"
path = "src/main.rs"

[dependencies]
# Core runtime
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# File system operations
glob = "0.3"

# Configuration
clap = { workspace = true }
config = { workspace = true }
toml = "0.8"
serde_yaml = "0.9"

# MCP Rust SDK dependencies
rmcp = { version = "0.3.1", features = ["server", "transport-io", "transport-sse-server"] }

# Codeprism dependencies for complete standalone functionality
codeprism-core = { version = "0.4.2" }
codeprism-analysis = { version = "0.4.2" }
codeprism-storage = { version = "0.4.2" }
codeprism-utils = { version = "0.4.2" }

# Language support - all parsers included for complete functionality
codeprism-lang-rust = { version = "0.4.2" }
codeprism-lang-python = { version = "0.4.2" }
codeprism-lang-js = { version = "0.4.2" }
codeprism-lang-java = { version = "0.4.2" }

regex.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true } 
