[package]
name = "codeprism-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP (Model Context Protocol) compliant server for codeprism"

[dependencies]
# Core dependencies
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true, features = ["derive"] }

# JSON-RPC 2.0 support
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Regex for pattern matching  
regex = "1.0"

# Random number generation for session IDs
rand = "0.8"

# Stdio transport
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Internal dependencies
codeprism-core = { version = "0.2.5", path = "../codeprism-core" }
codeprism-analysis = { version = "0.2.5", path = "../codeprism-analysis" }
codeprism-lang-python = { version = "0.2.5", path = "../codeprism-lang-python" }
codeprism-lang-js = { version = "0.2.5", path = "../codeprism-lang-js" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }

[[bin]]
name = "codeprism-mcp"
path = "src/main.rs" 