[package]
name = "codeprism-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Storage layer for codeprism code intelligence"

[dependencies]
neo4rs.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true

# Serialization dependencies
bincode = "1.3"
rmp-serde = "1.1"

# Compression dependencies
flate2 = "1.0"
zstd = "0.13"

# Database dependencies
rusqlite = { version = "0.30", features = ["bundled"] }

[dev-dependencies]
insta.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
tempfile = "3.8" 