[package]
name = "codeprism-test-harness"
version = "0.1.0"
edition = "2021"
description = "Automated test harness for CodePrism MCP tools"
license = "MIT OR Apache-2.0"

[[bin]]
name = "test-harness"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI interface
clap = { version = "4.0", features = ["derive"] }

# Time and duration handling
chrono = { version = "0.4", features = ["serde"] }

# Process management
nix = "0.27"

# HTTP and JSON-RPC (for MCP communication)
reqwest = { version = "0.12", features = ["json"] }

# Path and file operations
walkdir = "2.0"

# Development dependencies
[dev-dependencies]
tempfile = "3.0"
pretty_assertions = "1.0" 