[package]
name = "codeprism-test-harness"
version = "0.1.0"
edition = "2021"
description = "Generic MCP Server Test Harness for validating Model Context Protocol compliance"
license = "MIT OR Apache-2.0"
authors = ["CodePrism Team"]
repository = "https://github.com/rustic-ai/codeprism"

[[bin]]
name = "test-harness"
path = "src/main.rs"

[dependencies]
# Core async and serialization
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
regex = "1.0"

# Time and date handling
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI support
clap = { version = "4.0", features = ["derive"] }

# Network and transport
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.4"

# Process management for stdio transport
tokio-process = "0.2"

# Path and file operations
walkdir = "2.0"

# Development dependencies
[dev-dependencies]
tempfile = "3.0"
pretty_assertions = "1.0"
rstest = "0.18"
tokio-test = "0.4" 