[package]
name = "codeprism-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Lightweight utilities for CodePrism ecosystem - file monitoring, error handling, and common tools"

[dependencies]
# Minimal dependencies for utilities
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
serde = { workspace = true, features = ["derive"] }

# File watching - only dependency needed for FileWatcher
notify = { version = "6.1", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile.workspace = true

[features]
default = ["file-watcher"]
file-watcher = ["notify"]
ci-skip = []  # Feature for skipping flaky tests in CI environments 