[package]
name = "gcore-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for gcore"

[[bin]]
name = "gcore-cli"
path = "src/main.rs"

[dependencies]
gcore = { path = "../gcore" }
gcore-storage = { path = "../gcore-storage" }
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true 