[package]
name = "gcore-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Background daemon service for gcore"

[[bin]]
name = "gcore-daemon"
path = "src/main.rs"

[dependencies]
gcore = { path = "../gcore", features = ["full"] }
gcore-storage = { path = "../gcore-storage" }
gcore-bus = { path = "../gcore-bus" }
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true
notify.workspace = true

[dev-dependencies]
insta.workspace = true 