[package]
name = "gcore-mcp"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP (Model Context Protocol) compliant server for gcore"

[dependencies]
# Core dependencies
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true, features = ["derive"] }

# JSON-RPC 2.0 support
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Regex for pattern matching  
regex = "1.0"

# Stdio transport
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Internal dependencies
gcore = { path = "../gcore" }
gcore-lang-python = { path = "../gcore-lang-python" }
gcore-lang-js = { path = "../gcore-lang-js" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }

[[bin]]
name = "gcore-mcp"
path = "src/main.rs" 