[package]
name = "mandrel-mcp-th"
version.workspace = true
edition = "2021"
authors = ["AI Assistant"]
description = "Mandrel MCP Test Harness - Professional testing and reporting for MCP servers"
license = "MIT"
repository = "https://github.com/user/dragonscale"
keywords = ["mcp", "testing", "protocol", "mcp-protocol"]
categories = ["development-tools::testing", "command-line-utilities"]

[[bin]]
name = "moth"
path = "src/main.rs"
required-features = ["cli"]
test = false

[features]
default = ["cli"]
cli = []
testing = []
transport-streamable-http-client = []
transport-sse-client = []

[dependencies]
# Official MCP Rust SDK
rmcp = { version = "0.3.1", features = [
    "client", 
    "transport-child-process",
    "transport-sse-client",
    "transport-streamable-http-client", 
    "reqwest"
] }

# Core async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# HTTP client for MCP transports
reqwest = { version = "0.12", features = ["json"] }

# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"

# Error handling
anyhow = "1.0"
thiserror = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
jsonpath_lib = "0.3"
jsonschema = "0.18"

# Script engine dependencies  
which = "4.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Script execution engines
mlua = { version = "0.9", features = ["lua54", "async", "vendored", "serialize"] }
rquickjs = { version = "0.9", features = ["array-buffer", "futures"] }
pyo3 = { version = "0.24.1", features = ["auto-initialize"] }

# Reporting and templating
quick-junit = "0.5"
tera = "1.19"
pulldown-cmark = "0.10"

dirs = "5.0"
notify = "6.1"

# Lightweight CodePrism utilities for file monitoring
codeprism-utils = { version = "0.4.6" }

# Advanced configuration dependencies
regex = "1.10"              # For validation patterns
html5ever = "0.26"          # HTML validation

# Security and sandboxing dependencies
tempfile = "3.8"            # Temporary directory management

# Error handling for comprehensive error system
rand = "0.8"                # For jitter in retry delays

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
rstest = "0.18"

[[test]]
name = "cli_run"
path = "tests/cli_run.rs"
required-features = ["cli"]
