[package]
name = "mcp-test-harness-lib"
version = "0.1.0"
edition = "2021"
description = "Generic MCP (Model Context Protocol) test harness for validating server implementations"
authors = ["MCP Test Harness Team <team@example.com>"]
license = "MIT"
repository = "https://github.com/milliondreams/prism"
keywords = ["mcp", "testing", "protocol", "validation"]
categories = ["development-tools::testing"]

[[bin]]
name = "mcp-test-harness"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Async trait support
async-trait = "0.1"

# Futures utilities
futures = "0.3"

# Command line interface
clap = { version = "4.0", features = ["derive", "env"] }

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# JSON Schema validation
jsonschema = { version = "0.18", default-features = false }

# Enhanced error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async process management
tokio-process = "0.2"

# UUID generation for test runs
uuid = { version = "1.0", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# File system utilities
walkdir = "2.0"

# JSON path expressions (for field validation)
jsonpath_lib = "0.3"

# Regular expressions (for pattern matching)
regex = "1.0"

# HTTP client (for HTTP transport)
reqwest = { version = "0.11", features = ["json"], optional = true }

# WebSocket client (for WebSocket transport)
tokio-tungstenite = { version = "0.20", optional = true }

# URL parsing
url = "2.0"

# Enhanced reporting dependencies
handlebars = { version = "5.1", optional = true }  # Template engine for HTML reports
base64 = "0.22"              # For embedding images in HTML

# CSS and styling
include_dir = { version = "0.7", optional = true }  # For embedding CSS and templates

# Chart generation for reports (removed due to system dependencies)
# charming = { version = "0.3", optional = true }  # Rust chart library  
# plotters = { version = "0.3", optional = true }  # Alternative chart library 

[dev-dependencies]
# Enhanced testing
rstest = "0.18"
tempfile = "3.0"
tokio-test = "0.4"

# Test utilities
pretty_assertions = "1.0"
mockall = "0.11"

# Property-based testing
proptest = "1.0"

[features]
default = ["stdio-transport", "json-reports", "html-reports"]

# Transport mechanisms
stdio-transport = []
http-transport = ["reqwest"]
websocket-transport = ["tokio-tungstenite"]

# Enhanced report formats
json-reports = []
html-reports = ["handlebars", "include_dir"]
interactive-reports = ["html-reports"]
junit-reports = []

# Chart and visualization features (disabled due to system dependencies)
# charts = ["charming", "plotters"]
# advanced-charts = ["charts", "plotters"]

# Performance monitoring
performance-monitoring = []

# Experimental features
experimental = [] 