[package]
name = "prism-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core incremental polyglot parser and graph builder for code analysis"

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["sync", "fs"] }
async-trait.workspace = true

# Tree-sitter
tree-sitter.workspace = true
tree-sitter-highlight.workspace = true

# Utilities
blake3.workspace = true
hex.workspace = true
dashmap.workspace = true
once_cell.workspace = true
rayon.workspace = true
regex.workspace = true

# File watching
notify.workspace = true

# Repository scanning
walkdir = "2.4"
num_cpus = "1.16"

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
criterion.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
tree-sitter-javascript.workspace = true

[features]
default = []
full = ["lang-js", "lang-python", "lang-java"]
lang-js = ["prism-lang-js"]
lang-python = ["prism-lang-python"]
lang-java = ["prism-lang-java"]

[dependencies.prism-lang-js]
path = "../prism-lang-js"
optional = true

[dependencies.prism-lang-python]
path = "../prism-lang-python"
optional = true

[dependencies.prism-lang-java]
path = "../prism-lang-java"
optional = true

[[example]]
name = "phase_2_5_demo"
required-features = []

[dependencies.tempfile]
workspace = true 