[package]
name = "prism-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Storage layer for prism code intelligence"

[dependencies]
neo4rs.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true

[dev-dependencies]
insta.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true 