[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-sample"
version = "0.1.0"
description = "Enhanced Python sample project for MCP testing"
authors = ["Dragonscale Team <dev@rustic-ai.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.8.0"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
redis = "^5.0.8"
celery = "^5.3.7"
httpx = "^0.27.0"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
python-multipart = "^0.0.9"
email-validator = "^2.2.0"
jinja2 = "^3.1.4"
aiofiles = "^24.1.0"
tenacity = "^8.5.0"
structlog = "^24.4.0"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.1"
ruff = "^0.5.7"
pre-commit = "^3.8.0"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["E501"] 