[package]
name = "rust-test-project"
version = "0.1.0"
edition = "2021"
authors = ["CodePrism Team <dev@codeprism.io>"]
description = "Comprehensive Rust test project for CodePrism MCP analysis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/codeprism/prism"

[dependencies]
# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web framework and HTTP
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
hyper = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.13"
dotenv = "0.15"

# Database (async)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Concurrency and parallelism
rayon = "1.7"
crossbeam = "0.8"
parking_lot = "0.12"

# Memory management and performance
bytes = "1.4"
memmap2 = "0.7"

# CLI and argument parsing
clap = { version = "4.0", features = ["derive"] }

# Testing utilities
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.2"

# Macros and procedural macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Security and cryptography
ring = "0.16"
base64 = "0.21"

# Regular expressions
regex = "1.9"

# Iterator utilities
itertools = "0.11"

# FFI demonstrations
libc = "0.2"

[dev-dependencies]
tempfile = "3.7"
mockall = "0.11"
tokio-test = "0.4"

# Main binary only for test project

# Benchmarks removed for test project simplicity

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
overflow-checks = true

[workspace]
# This allows the project to be part of a workspace if needed 